--- a/README
+++ b/README
@@ -1,6 +1,4 @@
-NOTE: THIS ISN'T WORKING RIGHT NOW.  WORKING WITH NORTHSCALE TO GET WORKING
-
-Test out cache-money on Heroku
+Sample app using cache-money on Heroku
 
 $ heroku create --stack bamboo
 $ git push heroku master
