restart servers after migration

--- a/README
+++ b/README
@@ -4,5 +4,6 @@ $ heroku create --stack bamboo
 $ git push heroku master
 $ heroku addons:add memcache
 $ heroku rake db:migrate
+$ heroku restart
 
 go to appurl/users and try creating a user
